Modify CheckTypeSize.cmake module so it works with older CMake versions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,14 +65,17 @@ include (CheckIncludeFileCXX)
 include (CheckCXXSymbolExists)
 
 set (GFLAGS_INTTYPES_FORMAT "" CACHE STRING "Format of integer types: \"C99\" (uint32_t), \"BSD\" (u_int32_t), \"VC7\" (__int32)")
+set_property (CACHE GFLAGS_INTTYPES_FORMAT PROPERTY STRINGS "C99;BSD;VC7")
 mark_as_advanced (GFLAGS_INTTYPES_FORMAT)
 if (NOT GFLAGS_INTTYPES_FORMAT)
-  foreach (type IN ITEMS uint32_t u_int32_t __int32)
-    check_type_size (${type} SIZE LANGUAGE CXX)
-    if (SIZE)
-      set (HAVE_${type} TRUE)
-    else ()
-      set (HAVE_${type} FALSE)
+  set (TYPES uint32_t u_int32_t)
+  if (MSVC)
+    list (INSERT TYPES 0 __int32)
+  endif ()
+  foreach (type IN LISTS TYPES)
+    check_type_size (${type} ${type} LANGUAGE CXX)
+    if (HAVE_${type})
+      break ()
     endif ()
   endforeach ()
   if (HAVE_uint32_t)
