Fix DLL build on Windows and use PathMatchSpec instead of fnmatch. Expose as few system variables as possible through public interface. Perform STRIP_FLAGS_HELP test using CMake instead of Bash. Change file path separator used by gflags_reporting.cc to backslash on Windwos.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required(VERSION 2.8.4 FATAL_ERROR)
 
+if (WIN32 AND NOT CYGWIN)
+  set (WINDOWS 1)
+else ()
+  set (WINDOWS 0)
+endif ()
+
 # ----------------------------------------------------------------------------
 # includes
 set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
@@ -27,7 +33,12 @@ version_numbers (
 # ----------------------------------------------------------------------------
 # configure options
 option (BUILD_SHARED_LIBS "Request build of shared libraries." OFF)
-set (GFLAGS_SHARED_LIBS ${BUILD_SHARED_LIBS})
+
+if (WINDOWS AND BUILD_SHARED_LIBS)
+  set (GFLAGS_IS_A_DLL 1)
+else ()
+  set (GFLAGS_IS_A_DLL 0)
+endif ()
 
 option (BUILD_gflags_LIB           "Request build of the multi-threaded gflags library."  ON)
 option (BUILD_gflags_nothreads_LIB "Request build of the single-threaded gflags library." ON)
@@ -91,18 +102,44 @@ if (NOT GFLAGS_INTTYPES_FORMAT)
                          " Set GFLAGS_INTTYPES_FORMAT to either C99, BSD, or VC7 and try again.")
   endif ()
 endif ()
-set ("GFLAGS_INTTYPES_FORMAT_${GFLAGS_INTTYPES_FORMAT}" TRUE)
+# use of special characters in strings to circumvent bug #0008226
+if ("^${GFLAGS_INTTYPES_FORMAT}$" STREQUAL "^WIN$")
+  set_property (CACHE GFLAGS_INTTYPES_FORMAT PROPERTY VALUE VC7)
+endif ()
+if (NOT GFLAGS_INTTYPES_FORMAT MATCHES "^(C99|BSD|VC7)$")
+  message (FATAL_ERROR "Invalid value for GFLAGS_INTTYPES_FORMAT! Choose one of \"C99\", \"BSD\", or \"VC7\"")
+endif ()
+set (GFLAGS_INTTYPES_FORMAT_C99 0)
+set (GFLAGS_INTTYPES_FORMAT_BSD 0)
+set (GFLAGS_INTTYPES_FORMAT_VC7 0)
+set ("GFLAGS_INTTYPES_FORMAT_${GFLAGS_INTTYPES_FORMAT}" 1)
 
 foreach (fname IN ITEMS stdint sys/types fnmatch inttypes unistd sys/stat)
   string (TOUPPER "${fname}" FNAME)
   string (REGEX REPLACE "/" "_" FNAME "${FNAME}")
-  check_include_file_cxx ("${fname}.h" GFLAGS_HAVE_${FNAME}_H)
+  if (HAVE_${FNAME}_H)
+    # set by check_type_size already
+    set (GFLAGS_HAVE_${FNAME}_H ${HAVE_${FNAME}_H})
+  else ()
+    check_include_file_cxx ("${fname}.h" GFLAGS_HAVE_${FNAME}_H)
+  endif ()
 endforeach ()
+if (NOT GFLAGS_HAVE_FNMATCH_H AND WINDOWS)
+  check_include_file_cxx ("shlwapi.h" GFLAGS_HAVE_SHLWAPI_H)
+endif ()
+bool_to_int(GFLAGS_HAVE_STDINT_H)
+bool_to_int(GFLAGS_HAVE_SYS_TYPES_H)
+bool_to_int(GFLAGS_HAVE_INTTYPES_H)
 
-foreach (fname IN ITEMS strtoll strtoq)
-  string (TOUPPER "${fname}" FNAME)
-  check_cxx_symbol_exists ("${fname}" stdlib.h GFLAGS_HAVE_${FNAME})
-endforeach ()
+if (MSVC)
+  set (GFLAGS_HAVE_strtoll FALSE)
+  set (GFLAGS_HAVE_strtoq  FALSE)
+else ()
+  foreach (fname IN ITEMS strtoll strtoq)
+    string (TOUPPER "${fname}" FNAME)
+    check_cxx_symbol_exists ("${fname}" stdlib.h GFLAGS_HAVE_${FNAME})
+  endforeach ()
+endif ()
 
 set (CMAKE_THREAD_PREFER_PTHREAD TRUE)
 find_package (ThreadsCXX)
@@ -137,7 +174,7 @@ set (GFLAGS_SRCS
   "gflags_completions.cc"
 )
 
-if (WIN32)
+if (WINDOWS)
   list (APPEND PRIVATE_HDRS "windows_port.h")
   list (APPEND GFLAGS_SRCS  "windows_port.cc")
 endif ()
@@ -169,18 +206,11 @@ include_directories ("${PROJECT_BINARY_DIR}/include/${GFLAGS_NAMESPACE}")
 set (LIB_TARGETS)
 if (BUILD_gflags_LIB)
   add_library (gflags ${GFLAGS_SRCS} ${PRIVATE_HDRS} ${PUBLIC_HDRS})
-  if (WIN32 AND BUILD_SHARED_LIBS)
-    set_target_properties (gflags PROPERTIES COMPILE_DEFINITIONS GFLAGS_DLL_EXPORT)
-  endif ()
   list (APPEND LIB_TARGETS gflags)
 endif ()
 if (BUILD_gflags_nothreads_LIB)
   add_library (gflags_nothreads ${GFLAGS_SRCS} ${PRIVATE_HDRS} ${PUBLIC_HDRS})
-  if (WIN32 AND BUILD_SHARED_LIBS)
-    set_target_properties (gflags_nothreads PROPERTIES COMPILE_DEFINITIONS "GFLAGS_DLL_EXPORT;NO_THREADS")
-  else ()
-    set_target_properties (gflags_nothreads PROPERTIES COMPILE_DEFINITIONS NO_THREADS)
-  endif ()
+  set_target_properties (gflags_nothreads PROPERTIES COMPILE_DEFINITIONS NO_THREADS)
   list (APPEND LIB_TARGETS gflags_nothreads)
 endif ()
 
