--- a/src/config.h.in
+++ b/src/config.h.in
@@ -2,10 +2,86 @@
 
 // Note: This header file is only used internally. It is not part of public interface!
 
-#include "gflags_declare.h" // system checks
+// Whether gflags library is shared. Used for DLL import declaration.
+#define GFLAGS_IS_A_DLL @GFLAGS_IS_A_DLL@
 
 // ---------------------------------------------------------------------------
-// Additional meta-information
+// System checks
+
+// Define if you have the <stdint.h> header file.
+#cmakedefine GFLAGS_HAVE_STDINT_H
+
+// Define if you have the <sys/types.h> header file.
+#cmakedefine GFLAGS_HAVE_SYS_TYPES_H
+
+// Define if you have the <inttypes.h> header file.
+#cmakedefine GFLAGS_HAVE_INTTYPES_H
+
+// Define if you have the <sys/stat.h> header file.
+#cmakedefine GFLAGS_HAVE_SYS_STAT_H
+
+// Define if you have the <unistd.h> header file.
+#cmakedefine GFLAGS_HAVE_UNISTD_H
+
+// Define if you have the <fnmatch.h> header file.
+#cmakedefine GFLAGS_HAVE_FNMATCH_H
+
+// Define if you have the <shlwapi.h> header file (Windows 2000/XP).
+#cmakedefine GFLAGS_HAVE_SHLWAPI_H
+
+// Define if you have the strtoll function.
+#cmakedefine GFLAGS_HAVE_STRTOLL
+
+// Define if you have the strtoq function.
+#cmakedefine GFLAGS_HAVE_STRTOQ
+
+// Define if you have the <pthread.h> header file.
+#cmakedefine GFLAGS_HAVE_PTHREAD
+
+// Define if your pthread library defines the type pthread_rwlock_t
+#cmakedefine GFLAGS_HAVE_RWLOCK
+
+// Backwards compatibility in case users defined these macros themselves
+// or allow users to use these more general macros if the gflags library
+// is build as part of a user project, e.g., included as Git submodule
+#if defined(HAVE_STDINT_H) && !defined(GFLAGS_HAVE_STDINT_H)
+#  define GFLAGS_HAVE_STDINT_H
+#endif
+#if defined(HAVE_SYS_TYPES_H) && !defined(GFLAGS_HAVE_SYS_TYPES_H)
+#  define GFLAGS_HAVE_SYS_TYPES_H
+#endif
+#if defined(HAVE_INTTYPES_H)  && !defined(GFLAGS_HAVE_INTTYPES_H)
+#  define GFLAGS_HAVE_INTTYPES_H
+#endif
+#if defined(HAVE_SYS_STAT_H)  && !defined(GFLAGS_HAVE_SYS_STAT_H)
+#  define GFLAGS_HAVE_SYS_STAT_H
+#endif
+#if defined(HAVE_UNISTD_H)    && !defined(GFLAGS_HAVE_UNISTD_H)
+#  define GFLAGS_HAVE_UNISTD_H
+#endif
+#if defined(HAVE_FNMATCH_H)   && !defined(GFLAGS_HAVE_FNMATCH_H)
+#  define GFLAGS_HAVE_FNMATCH_H
+#endif
+#if defined(HAVE_STRTOLL)     && !defined(GFLAGS_HAVE_STRTOLL)
+#  define GFLAGS_HAVE_STRTOLL
+#endif
+#if defined(HAVE_STRTOLQ)     && !defined(GFLAGS_HAVE_STRTOLQ)
+#  define GFLAGS_HAVE_STRTOLQ
+#endif
+#if defined(HAVE_PTHREAD)     && !defined(GFLAGS_HAVE_PTHREAD)
+#  define GFLAGS_HAVE_PTHREAD
+#endif
+#if defined(HAVE_RWLOCK)      && !defined(GFLAGS_HAVE_RWLOCK)
+#  define GFLAGS_HAVE_RWLOCK
+#endif
+
+// gcc requires this to get PRId64, etc.
+#if defined(GFLAGS_HAVE_INTTYPES_H) && !defined(__STDC_FORMAT_MACROS)
+#  define __STDC_FORMAT_MACROS 1
+#endif
+
+// ---------------------------------------------------------------------------
+// Package information
 
 // Name of package.
 #define PACKAGE @PROJECT_NAME@
@@ -30,10 +106,42 @@
 
 // ---------------------------------------------------------------------------
 // Path separator
-#define PATH_SEPARATOR  '/'
+#ifndef PATH_SEPARATOR
+#  if _WIN32
+#    define PATH_SEPARATOR  '\\'
+#  else
+#    define PATH_SEPARATOR  '/'
+#  endif
+#endif
 
 // ---------------------------------------------------------------------------
-// Windows port
+// Windows
+
+// Always export symbols when compiling a shared library as this file is only
+// included by internal modules when building the gflags library itself.
+// The gflags_declare.h header file will set it to import these symbols otherwise.
+#ifndef GFLAGS_DLL_DECL
+#  if GFLAGS_IS_A_DLL && defined(_MSC_VER)
+#    define GFLAGS_DLL_DECL __declspec(dllexport)
+#  else
+#    define GFLAGS_DLL_DECL
+#  endif
+#endif
+// Flags defined by the gflags library itself must be exported
+#ifndef GFLAGS_DLL_DEFINE_FLAG
+#  define GFLAGS_DLL_DEFINE_FLAG GFLAGS_DLL_DECL
+#endif
+
 #ifdef _WIN32
+// The unittests import the symbols of the shared gflags library
+#  if GFLAGS_IS_A_DLL && defined(_MSC_VER)
+#    define GFLAGS_DLL_DECL_FOR_UNITTESTS __declspec(dllimport)
+#  endif
 #  include "windows_port.h"
+#endif
+
+// Export of STL class instantiations -- no extern keyword to not trigger a warning
+// \sa http://support.microsoft.com/default.aspx?scid=KB;EN-US;168958
+#if GFLAGS_IS_A_DLL && defined(_MSC_VER) && _MSC_VER >= 1100
+#  define GFLAGS_EXTERN_STL
 #endif
